[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Items/item1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/Inventory/slot_selected.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/Inventory/slot.png" type="Texture" id=3]
[ext_resource path="res://Scripts/UI/Inventory/slot.gd" type="Script" id=4]
[ext_resource path="res://Sprites/UI/Inventory/detail.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 90.857, 64.7397 )

[sub_resource type="CircleShape2D" id=2]
radius = 24.7044

[node name="Slot" type="Area2D"]
script = ExtResource( 4 )

[node name="Selected" type="Sprite" parent="."]
position = Vector2( 93.0112, 0 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )

[node name="Deselected" type="Sprite" parent="."]
position = Vector2( 92.5525, 0 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="MouseListener" type="CollisionShape2D" parent="."]
position = Vector2( 93.1137, 0 )
shape = SubResource( 1 )

[node name="Item" type="Sprite" parent="."]
position = Vector2( 93.1137, 0 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 1 )

[node name="Detail" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Detail"]
position = Vector2( 165.207, 50.3597 )
scale = Vector2( 0.186301, 0.186301 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detail"]
position = Vector2( 165.109, 50.2046 )
shape = SubResource( 2 )
[connection signal="input_event" from="." to="." method="on_slot_clicked"]
[connection signal="mouse_entered" from="." to="." method="on_slot_hover_enter"]
[connection signal="mouse_exited" from="." to="." method="on_slot_hover_exit"]
[connection signal="input_event" from="Detail" to="." method="on_detail_clicked"]
